<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".presenter.register.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/card_bottom_bar"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/TextView.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_your_photo"
                android:textColor="@android:color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_user_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:id="@+id/img_owner"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_select_image"
                        android:minHeight="96dp"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/img_icon_owner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_photo_camera_24"
                        tools:ignore="ContentDescription" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_user_photo"
                    style="@style/Button.Icon.Close"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@id/card_user_photo"
                    app:layout_constraintEnd_toEndOf="@id/card_user_photo"
                    app:layout_constraintStart_toEndOf="@id/card_user_photo"
                    app:layout_constraintTop_toTopOf="@id/card_user_photo"
                    tools:visibility="visible" />

                <FrameLayout
                    android:id="@+id/layout_hint_owner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/card_user_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/card_user_photo"
                    app:layout_constraintTop_toTopOf="@id/card_user_photo">

                    <TextView
                        android:id="@+id/tv_label_owner"
                        style="@style/TextView.Label.Hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/hint_front_face_view" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/TextView.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_nik"
                android:textColor="@android:color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nik"
                style="@style/TextInputLayout.Outlined"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nik"
                    style="@style/TextInput"
                    android:digits="1234567890"
                    android:hint="@string/hint_input_nik"
                    android:inputType="number"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextView.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_username"
                android:textColor="@android:color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_name"
                style="@style/TextInputLayout.Outlined"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    style="@style/TextInput"
                    android:hint="@string/hint_input_username"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_bottom_bar"
        style="@style/CardView.BottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/Button.Primary"
            android:layout_margin="20dp"
            android:text="@string/action_register" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>